force-app/main/default/objects/NPN_Business_Plan__c/NPN_Business_Plan__c.object-meta.xml
<CustomObject>
    <label>NPN Business Plan</label>
    <nameField>
        <label>NPN Business Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPN Business Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>