force-app/main/default/objects/NPN_Business_Plan__c/fields/Alliance_Relationship_s__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Relationship_s__c</fullName>
    <label>Alliance Relationship(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>NetApp</fullName>
            </value>
            <value>
                <fullName>DDN</fullName>
            </value>
            <value>
                <fullName>Pure Storage</fullName>
            </value>
            <value>
                <fullName>Nutanix</fullName>
            </value>
            <value>
                <fullName>EMC/Dell</fullName>
            </value>
            <value>
                <fullName>Weka.IO</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>