force-app/main/default/objects/NPN_Business_Plan__c/fields/CSP_Relationships__c.field-meta.xml
<CustomField>
    <fullName>CSP_Relationships__c</fullName>
    <label>CSP Relationship(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>