force-app/main/default/objects/NPN_Business_Plan__c/fields/Demo_Capability__c.field-meta.xml
<CustomField>
    <fullName>Demo_Capability__c</fullName>
    <label>Demo Capability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>