force-app/main/default/objects/NPN_Business_Plan__c/fields/Industry_Focus_Other__c.field-meta.xml
<CustomField>
    <fullName>Industry_Focus_Other__c</fullName>
    <inlineHelpText>Please describe the Industry Focus if Other</inlineHelpText>
    <label>Industry Focus Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>