force-app/main/default/objects/NPN_Business_Plan__c/fields/Key_Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact_1__c</fullName>
    <businessOwnerUser>karellano@nvidia.com.trprod</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDS-1491</description>
    <label>Key Contact #1</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please ensure Key Contact is on the NPN Business Plan Account</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.NPN_Account__c</valueField>
        </filterItems>
        <infoMessage>Key Contact must be related to the NPN Business Plan Account</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NPN Business Plans</relationshipLabel>
    <relationshipName>NPN_Business_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>