force-app/main/default/objects/NPN_Business_Plan__c/fields/Key_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact_2__c</fullName>
    <businessOwnerUser>karellano@nvidia.com.trprod</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDS-1491</description>
    <label>Key Contact #2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.NPN_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NPN Business Plans (Key Contact #2)</relationshipLabel>
    <relationshipName>NPN_Business_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>