force-app/main/default/objects/NPN_Business_Plan__c/fields/NPN_Account__c.field-meta.xml
<CustomField>
    <fullName>NPN_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NPN Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NPN Business Plans</relationshipLabel>
    <relationshipName>NPN_Business_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>