force-app/main/default/objects/NPN_Business_Plan__c/fields/NPN_Business_Plan_Number__c.field-meta.xml
<CustomField>
    <fullName>NPN_Business_Plan_Number__c</fullName>
    <displayFormat>NBP-{000000}</displayFormat>
    <label>NPN Business Plan Number</label>
    <type>AutoNumber</type>
</CustomField>