force-app/main/default/objects/NPN_Business_Plan__c/fields/OEM_Relationship_s__c.field-meta.xml
<CustomField>
    <fullName>OEM_Relationship_s__c</fullName>
    <label>OEM Relationship(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HPE</fullName>
            </value>
            <value>
                <fullName>Lenovo</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Super Micro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>