force-app/main/default/objects/NPN_Business_Plan__c/fields/Open_Items_Notes__c.field-meta.xml
<CustomField>
    <fullName>Open_Items_Notes__c</fullName>
    <label>Open Items/Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>