force-app/main/default/objects/NPN_Business_Plan__c/fields/Quadro_Fiscal_Year_Plan__c.field-meta.xml
<CustomField>
    <fullName>Quadro_Fiscal_Year_Plan__c</fullName>
    <label>Quadro Fiscal Year Plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>