force-app/main/default/objects/NPN_Business_Plan__c/fields/Satisfaction_with_NVIDIA__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_with_NVIDIA__c</fullName>
    <label>Satisfaction with NVIDIA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>