force-app/main/default/objects/NPN_Business_Plan__c/fields/Strategic_Enablement_3_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Enablement_3_Outcome__c</fullName>
    <label>Strategic Enablement 3 Outcome</label>
    <type>TextArea</type>
</CustomField>