force-app/main/default/objects/NPN_Business_Plan__c/fields/Strategic_Marketing_1_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Marketing_1_Outcome__c</fullName>
    <label>Strategic Marketing 1 Outcome</label>
    <type>TextArea</type>
</CustomField>