force-app/main/default/objects/NPN_Business_Plan__c/fields/Strategic_Objective2_Enablement_Activity__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Objective2_Enablement_Activity__c</fullName>
    <label>Strategic Objective2 Enablement Activity</label>
    <type>TextArea</type>
</CustomField>