force-app/main/default/objects/NPN_Business_Plan__c/fields/Strategic_Objective_1_Enablement_Date__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Objective_1_Enablement_Date__c</fullName>
    <inlineHelpText>When will Strategic go-to-market Objective 1 Enablement Activity be executed?</inlineHelpText>
    <label>Strategic Objective 1 Enablement Date</label>
    <type>Date</type>
</CustomField>