force-app/main/default/objects/NPN_Business_Plan__c/fields/Strategic_Objective_1_Goals__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Objective_1_Goals__c</fullName>
    <inlineHelpText>What are your goals around how to achieve the objective?</inlineHelpText>
    <label>Strategic Objective 1 Goals</label>
    <type>TextArea</type>
</CustomField>