force-app/main/default/objects/NPN_Business_Plan__c/fields/Strategic_Objective_1_KPI__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Objective_1_KPI__c</fullName>
    <label>Strategic Objective 1 KPI</label>
    <type>TextArea</type>
</CustomField>