force-app/main/default/objects/NPN_Business_Plan__c/fields/Strategic_Objective_2__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Objective_2__c</fullName>
    <label>Strategic Objective 2</label>
    <type>TextArea</type>
</CustomField>