force-app/main/default/objects/NPN_Business_Plan__c/fields/Strategic_Objective_2_Goals__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Objective_2_Goals__c</fullName>
    <label>Strategic Objective 2 Goals</label>
    <type>TextArea</type>
</CustomField>