force-app/main/default/objects/NPN_Business_Plan__c/fields/Strategic_Objective_2_Marketing_Date__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Objective_2_Marketing_Date__c</fullName>
    <label>Strategic Objective 2 Marketing Date</label>
    <type>Date</type>
</CustomField>