force-app/main/default/objects/NPN_Business_Plan__c/fields/Strategic_Objective_2_Sales_Activity__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Objective_2_Sales_Activity__c</fullName>
    <label>Strategic Objective 2 Sales Activity</label>
    <type>TextArea</type>
</CustomField>