force-app/main/default/objects/NPN_Business_Plan__c/fields/Strategic_Objective_3_Enablement_Date__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Objective_3_Enablement_Date__c</fullName>
    <label>Strategic Objective 3 Enablement Date</label>
    <type>Date</type>
</CustomField>