force-app/main/default/objects/NPN_Business_Plan__c/fields/Strategic_Objective_3_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Objective_3_Marketing__c</fullName>
    <label>Strategic Objective 3 Marketing</label>
    <type>TextArea</type>
</CustomField>